# catabot-for-discord

./: .gitignore  README.md  bot.py  config.toml  pyproject.toml  requirements.txt  restart.bat  restart.sh  start.bat  start.sh  stop.bat  stop.sh  watchdog.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
catabot/: __init__.py  app.py  cog.py  embeds.py  models.py  runtime.py  shopify.py  storage.py  views.py
cogs/: restock.py  steam.py
data/: bot_state.json  stock_state.json
docs/superpowers/plans/: 2026-06-02-product-watch.md
docs/superpowers/specs/: 2026-06-02-product-watch-design.md
logs/: err.txt
scripts/: apply-sysctl-tuning.sh  apply-tcp-tuning.ps1  bot.ps1  bot.sh  check_pagination.py  install-service.sh  sync-data.bat  sync-data.sh  watchdog.ps1  watchdog.sh
tests/: test_embeds.py  test_models.py  test_shopify.py
